# anora.cafe

./: .gitignore  Cargo.toml  README.md
migrations/: 001_saved_addresses.sql
src/: app.rs  events.rs  main.rs
src/db/: cache.rs  mod.rs  ssh_identity.rs  supabase.rs
src/models/: cart.rs  mod.rs  order.rs  product.rs  region.rs  user.rs
src/ui/: account.rs  cart.rs  footer.rs  header.rs  home.rs  mod.rs  shop.rs  theme.rs
supabase/: schema.sql
